<resources>
    <string name="app_name">Kraffier</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>


    <string name="title_post_request">新增任務</string>
    <string name="title_ranking_list">排行榜</string>
    <string name="title_profile">個人</string>
    <string name="navigation_home">navigation_home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="ranking_list_fragment">Hello ranking list fragment</string>
    <string name="home_fragment">Hello home fragment</string>
    <string name="post_request_fragment">Hello post request fragment</string>
    <string name="profile_fragment">Hello profile fragment</string>

    <string name="tab_text_task_posted">張貼中案件</string>
    <string name="tab_text_task_on_going">進行中案件</string>
    <string name="tab_text_task_finished">已完成案件</string>

    <string name="button_item_request_close">確認結案</string>

    <string name="textView_task_location_blank">任務地點 :</string>
    <string name="textView_task_create_time_blank">發案時間 :</string>
    <string name="textView_task_create_time">1小時前</string>
    <string name="textView_proposals_word">提案人數 :</string>
    <string name="textView_proposals_numbers">5</string>

    <string name="textView_status">案件狀態 :</string>
    <string name="textView_status_numbers">-1 ~ 0</string>
    <string name="textView_task_price_blank">價錢 :</string>
    <string name="button_mission_detail_proposal_total">檢視提案(%d)</string>
    <string name="button_mission_detail">任務細節</string>

    <string name="textView_post_request_title"><![CDATA[標題 >]]></string>
    <string name="textView_post_request_price"><![CDATA[價格 >]]></string>
    <string name="textView_post_request_content"><![CDATA[內容 >]]></string>
    <string name="textView_post_request_post_pictures"><![CDATA[照片 >]]></string>
    <string name="button_post_request_send">送出任務</string>
    <string name="editText_post_request_title">我要吃午餐</string>
    <string name="editText_post_request_price">1500</string>
    <string name="editText_post_request_content">想要吃漢堡</string>
    <string name="textView_post_request_location">地點 ></string>
    <string name="editText_post_request_location">台北市基隆路</string>
    <string name="textView_user_name_tag">發起人名稱 :</string>

    <string name="textView_fragment_profile_name">Tom</string>
    <string name="fragment_textView_fb_log_in">請透過Facebook登入使用更多功能</string>
    <string name="Button_facebook_log_in">Facebook 登入</string>


    <!--facebook login-->
    <string name="facebook_app_id">112927453482177</string>
    <string name="fb_login_protocol_scheme">fb112927453482177</string>
    <string name="button_ranking_item_invite">邀請我</string>
    <string name="textView_ranking_item_name">Vishal</string>


    <string name="you_know_nothing">You know nothing</string>

    <!-- job detail fragment -->
    <string name="button_job_detail_connect_to_project_owner">即時聯繫業主</string>
    <string name="button_job_detail_send_proposal">我要接案</string>
    <string name="textView_job_detail_content_blank">Content :</string>
    <string name="textView_job_detail_picture_from_task_owner">情鏡圖 :</string>

    <!-- Detail -->
    <string name="color">顏色</string>
    <string name="size">尺寸</string>
    <string name="stock">庫存</string>
    <string name="texture">材質</string>
    <string name="wash">洗滌</string>
    <string name="place">產地</string>
    <string name="note">備註</string>
    <string name="add2cart">加入購物車</string>
    <string name="select_color">選擇顏色</string>
    <string name="select_size">選擇尺寸</string>
    <string name="select_amount">選擇數量</string>
    <string name="stock_not_enough">庫存不足</string>

    <!-- Proposals Edit fragment-->

    <string name="textView_proposal_sender_name">你的Email ></string>
    <string name="textView_proposal_request_content_tag">為甚麼要選我 ></string>
    <string name="button_proposal_send">送出</string>
    <string name="editText_proposal_content">EX : 我有多年XXX的經驗, 以下連結是我過往的作品 www.YOURWEBPAGE.com...</string>

    <!-- Proposals list fragment and item -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_proposal_content_tag">內容</string>

    <!-- ChatRoom-->
    <string name="editText_input_message">...</string>
    <string name="button_send_message">送出訊息</string>
    <string name="button_item_request_message">線上詢問</string>
    <string name="btn_choose_image">選擇情境照</string>
    <string name="textView_no_data_yet">目前沒有提案</string>
    <string name="fragment_my_proposals">我的提案</string>

    <string name="button_to_task_progress_sheet">任務進度</string>
    <string name="fragment_home">所有任務</string>

    <string name="textView_proposal_content_item_tag1"><![CDATA[我要怎麼做到 >]]></string>
    <string name="textView_job_detail_task_content_tag">任務內容 </string>
    <string name="textView_job_detail_task_picture_tag">說明圖片 </string>
    <string name="button_job_detail_live_chat">線上詢問</string>


    <!--fragment_pro_progress.xml-->
    <string name="button_edit_progress_item">編輯進度事項</string>
    <string name="button_nav_back_proposal_list">回提案列表</string>
    <string name="button_finish_this_task">任務完成</string>
    <string name="textView_add_some_progress_items">隨時新增進度事項，讓案主掌握進度喔。</string>

    <!--fragment_proposal_progress_edit-->
    <string name="editText_proposal_progress_item">Ex:已將手機送至指定Apple Store</string>
    <string name="textView_add_new_progress_item">新增進度事項</string>
    <string name="button_send_out_my_progress_item">確認新增</string>
    <string name="textView_update_progress_pictures">更新進度圖片</string>

    <!--item_proposal.xml-->
    <string name="imageButton_proposal_reject">取消接受</string>
    <string name="textView_proposal_owner_steps"><![CDATA[完成步驟 >]]></string>

    <!-- fragment_home.xml-->
    <string name="textView_no_data_yet_fragment_home">目前沒有任務</string>

    <!--item_proposal_progress.xml-->
    <string name="textView_person_sign_off_item_proposal_progress">已完成</string>
    <string name="button_item_proposal_progress_complete">確認完成</string>

    <!--item_task_of_my_for_profile_page.xml-->
    <string name="textView_task_status_posting_profile_page">案件刊登中</string>
    <string name="textView_task_status_on_going_profile_page">案件進行中</string>
    <string name="textView_task_status_finished_profile_page">案件已結案</string>





</resources>
