<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="viewModel"
            type="com.tom.helper.postrequest.PostRequestViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_post_request_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="32dp"
            android:text="@string/textView_post_request_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_post_request_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="40dp"
            android:text="@string/textView_post_request_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_post_request_title" />

        <EditText
            android:id="@+id/editText_post_request_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="52dp"
            android:background="@drawable/frame_background"
            android:ems="10"
            android:hint="@string/editText_post_request_title"
            android:inputType="textPersonName"
            android:text="@={viewModel.taskTitle}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toEndOf="@+id/textView_post_request_title"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_post_request_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="52dp"
            android:background="@drawable/frame_background"
            android:ems="10"
            android:hint="@string/editText_post_request_person"
            android:inputType="textPersonName"
            android:text="@={viewModel.taskProvider}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toEndOf="@+id/textView_post_request_title"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_post_request_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/frame_background"
            android:ems="10"
            android:hint="@string/editText_post_request_price"
            android:inputType="number"
            android:text="@={viewModel.convertLongToString(viewModel.taskPrice)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.261"
            app:layout_constraintStart_toEndOf="@+id/textView_post_request_price"
            app:layout_constraintTop_toBottomOf="@+id/editText_post_request_title" />

        <TextView
            android:id="@+id/textView_post_request_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="104dp"
            android:text="@string/textView_post_request_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_post_request_title" />

        <EditText
            android:id="@+id/editText_post_request_content"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="52dp"
            android:background="@drawable/frame_background"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/editText_post_request_content"
            android:inputType="textMultiLine"
            android:text="@={viewModel.taskContent}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toEndOf="@+id/textView_post_request_content"
            app:layout_constraintTop_toBottomOf="@+id/editText_post_request_price" />

        <TextView
            android:id="@+id/textView_post_request_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="50dp"
            android:text="@string/textView_post_request_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_post_request_price" />

        <ImageButton
            android:id="@+id/imageView_post_request_upload_picture2"
            android:layout_width="218dp"
            android:layout_height="91dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="76dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_post_request_content"
            app:srcCompat="@drawable/image_upload_pictures" />

        <TextView
            android:id="@+id/textView_post_request_post_pictures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="100dp"
            android:text="@string/textView_post_request_post_pictures"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_post_request_content" />


        <Button
            android:id="@+id/button_post_request_send"
            android:layout_width="273dp"
            android:layout_height="41dp"
            android:layout_margin="50dp"
            android:layout_marginTop="50dp"
            android:background="#FF7878"
            android:onClick="@{()->viewModel.submitTask()}"
            android:text="@string/button_post_request_send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_post_request_upload_picture2" />





    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

<!--    android:text="@={viewModel.taskPrice}"-->