<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.tom.helper.proposaleditfragment.ProposalEditViewModel" />


    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ecf3f9"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_proposal_sender_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="88dp"
            android:text="@string/textView_proposal_sender_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_proposal_edit_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="56dp"
            android:background="@drawable/frame_background"
            android:ems="10"
            android:hint="@string/editText_post_request_person"
            android:inputType="textPersonName"

            android:text="@={viewModel.proposalProvider}"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_proposal_content"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="68dp"
            android:background="@drawable/frame_background"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/editText_proposal_content"
            android:inputType="textMultiLine"
            android:text="@={viewModel.proposalContent}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.67"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_proposal_edit_person" />

        <TextView
            android:id="@+id/textView_proposal_request_content_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="76dp"
            android:text="@string/textView_proposal_request_content_tag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_proposal_sender_name" />

        <Button
            android:id="@+id/button_proposal_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#f09c67"
            android:onClick="@{()->viewModel.submitProposal()}"
            android:text="@string/button_proposal_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_proposal_content"
            app:layout_constraintVertical_bias="0.29" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

